# Cloud-Native-AI-Systems

./: .gitignore  README.md
devtools/: lab1.py
lab2/src/: todo1_basics.py  todo2_classes.py
lab2/tests/: test_todo1_basics.py  test_todo2_classes.py
lab3/: lab3-questions.txt
lab3/app/: config.py  openrouter_client.py  retry.py  runner.py
lab3/tests/: test_todo1_async_calls.py  test_todo2_retries_timeouts.py
lab4/: agents.md  lab4-questions.txt  pyproject.toml
lab4/app/: config.py  main.py  models.py
lab4/tests/: test_summarize.py
lab5/: lab5-answers.txt
lab5/lab5/: package-lock.json  package.json
lab5/lab5-frontend/: BACKEND.md  agents.md
lab7-database/: agents.md  ai-model.md  check_openrouter_key.py  docker-compose.yml  lab7-answers.txt
lab7-database/backend/: .dockerignore  Dockerfile  pyproject.toml
lab7-database/backend/app/: config.py  db.py  main.py  (+1 more)
lab7-database/frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
lab8-ai/: README.md  pyproject.toml
lab8-ai/ai_pipeline/: __init__.py  ingest.py  query.py  service.py
lab8-ai/ai_pipeline/prompts/: risks.md  summary.md
lab8-fullstack/: .env.example  README.md  docker-compose.yml  lab8_rag_prompt_study_answers.txt
lab8-fullstack/backend/: .dockerignore  Dockerfile  pyproject.toml
lab8-fullstack/backend/app/: __init__.py  config.py  db.py  main.py  models.py
lab8-fullstack/backend/scripts/: docker_entrypoint.py  entrypoint.sh
lab8-fullstack/backend/sql/: schema.sql
lab8-fullstack/frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
(+7 files in other folders)
