[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lab8-fullstack-backend"
version = "0.1.0"
description = "Lab 8 full-stack API wrapping lab8-ai pipeline"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "python-multipart>=0.0.9",
  "psycopg[binary]>=3.1.0",
  "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
